# learn-vulkan

./: CMakeLists.txt
cmake/: Dependenties.cmake  PrintTargetProperties.cmake
dependenties/: CMakeLists.txt
src/: CMakeLists.txt
src/descriptor/: CMakeLists.txt  application.cpp  application.h  config.h.txt  main.cpp
src/descriptor/shaders/: shader.vert
src/image/: CMakeLists.txt  application.cpp  application.h  config.h.txt
src/image/shaders/: shader.frag  shader.vert
src/triangle/: CMakeLists.txt  config.h.txt  main.cpp  triangle.cpp  triangle.h
src/vertex/: CMakeLists.txt  application.cpp  application.h  config.h.txt
src/window/: CMakeLists.txt  config.h.txt  main.cpp
